# Audiby

./: .gitignore  Audiby.spec  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns
scripts/: build.py
src/audiby/: __init__.py  __main__.py  app.py  config.py  constants.py  exceptions.py  resources.py
src/audiby/core/: __init__.py  audio_recorder.py  model_manager.py  text_injector.py  transcriber.py
src/audiby/platform/: __init__.py  _autostart_mac.py  _autostart_win.py  _clipboard_mac.py  _clipboard_win.py  _hotkey_mac.py  _hotkey_win.py  _shell_mac.py  _shell_win.py  autostart.py  clipboard.py  hotkey_manager.py  macos_permissions.py  paths.py  shell.py
src/audiby/ui/: __init__.py  download_dialog.py  error_dialogs.py  settings_window.py  tray.py
tests/: __init__.py  conftest.py  test_app_logging.py  test_app_orchestrator.py  test_build_script.py  test_config.py  test_exceptions.py  test_main.py  test_resources.py  test_smoke.py
tests/core/: test_audio_recorder.py  test_model_manager.py  test_text_injector.py  test_transcriber.py
tests/integration/: test_model_manager_integration.py
tests/platform/: test_autostart.py  test_clipboard.py  test_hotkey_manager.py  test_macos_permissions.py  test_paths.py
tests/ui/: test_download_dialog.py  test_error_dialogs.py  test_settings_window.py  test_tray.py
